try some attacks on the simple generator

--- a/src/tapas.ipynb
+++ b/src/tapas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -56,222 +56,11 @@
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Region</th>\n",
-       "      <th>Residence Type</th>\n",
-       "      <th>Family Composition</th>\n",
-       "      <th>Population Base</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Marital Status</th>\n",
-       "      <th>Student</th>\n",
-       "      <th>Country of Birth</th>\n",
-       "      <th>Health</th>\n",
-       "      <th>Ethnic Group</th>\n",
-       "      <th>Religion</th>\n",
-       "      <th>Economic Activity</th>\n",
-       "      <th>Occupation</th>\n",
-       "      <th>Industry</th>\n",
-       "      <th>Hours worked per week</th>\n",
-       "      <th>Approximated Social Grade</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>For terms and conditions of use visit: http://www.ons.gov.uk/ons/guide-method/census/2011/census-data/census-microdata/microdata-teaching-file/user-guide/index.html</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Person ID</th>\n",
-       "      <td>Region</td>\n",
-       "      <td>Residence Type</td>\n",
-       "      <td>Family Composition</td>\n",
-       "      <td>Population Base</td>\n",
-       "      <td>Sex</td>\n",
-       "      <td>Age</td>\n",
-       "      <td>Marital Status</td>\n",
-       "      <td>Student</td>\n",
-       "      <td>Country of Birth</td>\n",
-       "      <td>Health</td>\n",
-       "      <td>Ethnic Group</td>\n",
-       "      <td>Religion</td>\n",
-       "      <td>Economic Activity</td>\n",
-       "      <td>Occupation</td>\n",
-       "      <td>Industry</td>\n",
-       "      <td>Hours worked per week</td>\n",
-       "      <td>Approximated Social Grade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7394816</th>\n",
-       "      <td>E12000001</td>\n",
-       "      <td>H</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-9</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7394745</th>\n",
-       "      <td>E12000001</td>\n",
-       "      <td>H</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7395066</th>\n",
-       "      <td>E12000001</td>\n",
-       "      <td>H</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                       Region  Residence Type  \\\n",
-       "For terms and conditions of use visit: http://w...        NaN             NaN   \n",
-       "Person ID                                              Region  Residence Type   \n",
-       "7394816                                             E12000001               H   \n",
-       "7394745                                             E12000001               H   \n",
-       "7395066                                             E12000001               H   \n",
-       "\n",
-       "                                                    Family Composition  \\\n",
-       "For terms and conditions of use visit: http://w...                 NaN   \n",
-       "Person ID                                           Family Composition   \n",
-       "7394816                                                              2   \n",
-       "7394745                                                              5   \n",
-       "7395066                                                              3   \n",
-       "\n",
-       "                                                    Population Base  Sex  Age  \\\n",
-       "For terms and conditions of use visit: http://w...              NaN  NaN  NaN   \n",
-       "Person ID                                           Population Base  Sex  Age   \n",
-       "7394816                                                           1    2    6   \n",
-       "7394745                                                           1    1    4   \n",
-       "7395066                                                           1    2    4   \n",
-       "\n",
-       "                                                    Marital Status  Student  \\\n",
-       "For terms and conditions of use visit: http://w...             NaN      NaN   \n",
-       "Person ID                                           Marital Status  Student   \n",
-       "7394816                                                          2        2   \n",
-       "7394745                                                          1        2   \n",
-       "7395066                                                          1        2   \n",
-       "\n",
-       "                                                    Country of Birth  Health  \\\n",
-       "For terms and conditions of use visit: http://w...               NaN     NaN   \n",
-       "Person ID                                           Country of Birth  Health   \n",
-       "7394816                                                            1       2   \n",
-       "7394745                                                            1       1   \n",
-       "7395066                                                            1       1   \n",
-       "\n",
-       "                                                    Ethnic Group  Religion  \\\n",
-       "For terms and conditions of use visit: http://w...           NaN       NaN   \n",
-       "Person ID                                           Ethnic Group  Religion   \n",
-       "7394816                                                        1         2   \n",
-       "7394745                                                        1         2   \n",
-       "7395066                                                        1         1   \n",
-       "\n",
-       "                                                    Economic Activity  \\\n",
-       "For terms and conditions of use visit: http://w...                NaN   \n",
-       "Person ID                                           Economic Activity   \n",
-       "7394816                                                             5   \n",
-       "7394745                                                             1   \n",
-       "7395066                                                             1   \n",
-       "\n",
-       "                                                    Occupation  Industry  \\\n",
-       "For terms and conditions of use visit: http://w...         NaN       NaN   \n",
-       "Person ID                                           Occupation  Industry   \n",
-       "7394816                                                      8         2   \n",
-       "7394745                                                      8         6   \n",
-       "7395066                                                      6        11   \n",
-       "\n",
-       "                                                    Hours worked per week  \\\n",
-       "For terms and conditions of use visit: http://w...                    NaN   \n",
-       "Person ID                                           Hours worked per week   \n",
-       "7394816                                                                -9   \n",
-       "7394745                                                                 4   \n",
-       "7395066                                                                 3   \n",
-       "\n",
-       "                                                    Approximated Social Grade  \n",
-       "For terms and conditions of use visit: http://w...                        NaN  \n",
-       "Person ID                                           Approximated Social Grade  \n",
-       "7394816                                                                     4  \n",
-       "7394745                                                                     3  \n",
-       "7395066                                                                     4  "
+       "(569743, 17)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +69,7 @@
     "display(type(data))\n",
     "dir(data)\n",
     "type(data.data)\n",
-    "data.data.head()"
+    "data.data.head()\n"
    ]
   },
   {
